Fixing alignment issue

--- a/src/Styles/GetStarted.css
+++ b/src/Styles/GetStarted.css
@@ -5,12 +5,36 @@
   height: 100vh;
 }
 
-.nav {
+.bc-heading-cont {
+  border: 2px solid red;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: 0.2rem;
+  display: flex;
+  justify-content: end;
+}
+
+.bc-heading-child {
+  border: 2px solid blue;
+  height: 100%;
+  width: 60%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.image-cont {
+  width: 50%;
+  border: 2px solid green;
+}
+
+.nav {
+  display: flex;
+  justify-content: center;
   height: 6rem;
   align-items: center;
   background-color: white;
+  border: 2px solid red;
 }
 .v-line {
   width: 90%;
@@ -31,8 +55,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 12%;
-  height: 25%;
+  object-fit: cover;
+  width: 12rem;
+  height: 4rem;
+  border: 2px solid blue;
 }
 .img-cover {
   width: 100%;
@@ -139,4 +165,16 @@
 .arrow-icon {
   font-size: 12px;
   color: black;
+}
+
+@media screen and (max-width: 400px) {
+  .main-title {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .bc-heading-child {
+    width: 100%;
+  }
 }
